v1.1/docs/content_format.md
# Creator content format v1

Creator Studio saves each town in a directory chosen by the creator. The GUI and `tools/creator-cli.js` read the same files. Nothing important is stored only in the GUI.

## Town directory

```text
<chosen workspace>/<town_id>/
├── town.json
├── game_settings.json
├── runtime_profile.json
├── validation.json
├── source_osm/
│   └── 01_original-name.osm
└── data/
    ├── map_features.json
    ├── building_collisions.json
    └── navigation_graphs.json
```

`town.json` identifies the content schema, display name, source files, imported geographic bounds, CBD rectangle, starting position and import counts. `data/map_features.json` keeps building, road, water, waterway, coastline and overhead-structure geometry used by the GUI preview and runtime. Source files are copied rather than moved.

`game_settings.json` contains creator-editable NPC, traffic, NPR and NPD populations and CBD targets, left/right road rules, visual-only skin-pigmentation percentages, player-driving and traffic-recovery values. Skin-pigmentation percentages must total 100% and do not affect any other NPC setting. Equal weights are generated by the default-selected Equalize control. The Creator Studio Game Settings page is the ordinary user interface; `schemas/game_settings.schema.json` defines the safe ranges.

`data/navigation_graphs.json` is regenerated from OSM whenever the GUI creates or saves a project. It retains directed vehicle/pedestrian edges, source way IDs, distances, disconnected components, CBD reachability, the chosen road side and explicit inference warnings. OSM node IDs determine intersections, preventing roads that merely cross at different levels from being falsely joined. Its contract is `schemas/navigation_graphs.schema.json`. The shared playable preview consumes these graphs for cars, NPCs, NPRs and NPDs; the JSON remains data, not executable code.

`data/building_collisions.json` is regenerated from the same imported OSM geometry. It converts longitude/latitude rings to local metres, retains concave outlines and multipolygon inner courtyards, records an 8-pixel-per-metre runtime scale, and assigns buildings to 256-metre streaming chunks. It also contains `water_areas` and tagged `water_crossings` with bridge/tunnel kind, width and OSM layer. The runtime uses these areas as the shared ground-traversal rule and the reusable Godot loader creates static building pieces only for nearby chunks. Its contract is `schemas/building_collisions.schema.json`. Textures never define physical collision.

Water import recognises standard OSM closed ways and multipolygon tag families including `natural=water`, `water=*`, `landuse=reservoir`, `waterway=riverbank` and swimming pools, plus linear waterways and coastlines. Bounded coastal exports may omit remote members of a harbour/sea relation. The deterministic importer clips supplied outer shoreline chains to the declared OSM `<bounds>`, closes them along that export rectangle, and selects the candidate containing less mapped building/ordinary-road evidence. Such features carry `geometry_quality: clipped_osm_boundary_inference`; they are inferred only at the known export edge, not surveyed closures.

If an incomplete relation cannot be resolved unambiguously, `unresolved_water_relations` is non-zero and validation blocks a playable build. This is a safety rule: unknown water must not silently become drivable ground. A complete source export or a future explicit map-editor override is required. The GUI and Node CLI apply identical rules and neither path calls an LLM.

Missing relation members are classified by OSM role. Missing `outer` members can make the water edge unknown and invoke reconstruction or the blocker above. Missing `inner` members represent omitted islands/dry-land holes; when the outer ring is complete, the importer keeps the uncertain holes conservatively blocked as water, emits a warning and permits the project to build. It must not discard a valid outer water polygon merely because an optional inner member is outside the export.

When OSM supplies `<bounds>`, that declared export rectangle is the playable map boundary even if a complete road way contains end nodes slightly outside it. Player and owned-vehicle movement cannot escape around a coastal water polygon by leaving the authoritative exported area.

`town.json` records both portable copied OSM files and, for new imports, their original local paths. The GUI exposes one **Rebuild project** action: it automatically prefers all available originals and otherwise uses the copies. A rebuild regenerates map features, collisions, navigation, traffic controls, validation and the shared playable profile without requiring code or an LLM.

`data/map_features.json` preserves tags attached to OSM road nodes. Navigation generation classifies traffic signals, stop signs, give-way signs and crossings from those tags. When no explicit controls are present, the runtime uses basic safe junction reservations and reports the assumption instead of inventing surveyed controls.

`runtime_profile.json` records the complete gameplay feature family the generated game must provide. GUI-created or upgraded projects use `preview_ready` and `creator_studio_shared_runtime`, allowing **Play test project** to open the town with the current generic mechanics. Node-only imports use `pending_runtime_build` until the Godot build command below creates navigation data and upgrades the profile. `preview_ready` does not mean full v1.3 parity; read `preview_limitations` before making compatibility claims.

`starting_location` contains separate geographic positions for the player and the player's vehicle. Creator Studio rejects a player position inside or within 1 metre of a fixed building footprint, finds a road position for the vehicle with 4 metres of footprint clearance, and keeps at least 8 metres between them. These checks run again during validation so an unsafe manual file edit cannot silently pass. As new non-movable footprint types are added, they must use `fixed_footprint` and participate in the same validation.

A curated start may also include `label`, `osm_building_id`, `placement` and `entrance_verified`. These are descriptive provenance, not permission to bypass geometry checks. Use `entrance_verified: false` when a start is associated with a named building but the source does not establish an exact doorway; never convert a place name into an invented entrance.

The schema is `schemas/town.schema.json`. Future migrations must increase `schema_version` and provide an explicit upgrade command; never silently reinterpret an older content pack.

## Coordinate convention

- Geographic points are `[longitude, latitude]` decimal degrees.
- Bounds use `west`, `south`, `east`, `north`.
- Godot/game coordinates are generated later and must not replace the geographic source.

## Codex contract

Use the CLI for predictable reads and writes. Pass `--json` for one machine-readable JSON object. A non-zero exit code means validation or the requested operation failed.

```text
node tools/creator-cli.js list-towns --workspace <directory> --json
node tools/creator-cli.js inspect-town --town <town-directory> --json
node tools/creator-cli.js validate-town --town <town-directory> --json
node tools/creator-cli.js get-settings --town <town-directory> --json
node tools/creator-cli.js set-settings --town <town-directory> --traffic-car-count 200 --cbd-car-percent 70 --json
node tools/creator-cli.js set-settings --town <town-directory> --driving-side left --robot-count 20 --cbd-robot-percent 100 --drone-count 10 --cbd-drone-percent 90 --equalize-skin-tones --json
```

Codex can regenerate a saved town's navigation without operating the GUI:

```text
Godot_v4.7.2-stable_win64.exe --headless --path <creator-v1.1> --script res://tools/build_town_navigation.gd -- --town <town-directory>
```

Do not edit copied OSM source files. Future building, interior and NPC editors will store user choices in explicit override files with stable IDs.

## Local LLM boundary

Local-model connections are not part of the creator file/build API. They will be runtime settings used only to produce typed dialogue for assigned NPC personas. They must never be used to create or modify project content.

Town import, coordinate projection, collision generation, validation, chunking and route generation are deterministic operations. They never call a local LLM, Codex or an online model and contain no town-specific coordinates. Unsupported or malformed OSM geometry is reported; model output is never used to guess a replacement footprint.
